syntax = "proto3";

package folding.v1;

// First group of imports (should be foldable)
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

// Second group separated by blank line (should be foldable)
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


// Third group separated by 2+ blank lines (should be separate)
import "google/protobuf/struct.proto";
import "google/protobuf/field_mask.proto";

// Single import (should not be foldable)
import "google/protobuf/type.proto";

message ImportTest {
  string name = 1;
}
