syntax = "proto3";

package example.types;

message ExistingField {
  string value = 1;
}
